k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: chelsea
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: eydscasandbox.azurecr.io/chelsea/api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: chelsea
  name: api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: api
