k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: chelsea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - args:
            - --http-address=http://0.0.0.0:4180
            - --upstream=http://nginx:80
            - --email-domain=*
            - --provider=github
            - --cookie-httponly=false
            - --cookie-secure=false
            - --cookie-samesite=lax
            - --cookie-name=_oauth2_proxy
            - --cookie-expire=168h0m0s
            - --cookie-httponly=true
            - --cookie-domain=chelsea.k8s.freshworks.club
            - --session-store-type=cookie
            - --set-xauthrequest=true
            - --pass-access-token=true
            - --pass-user-headers=true
            - --auth-logging=true
            - --proxy-websockets=true
            - --reverse-proxy=true
          name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
          ports:
            - containerPort: 4180
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: chelsea
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: oauth2-proxy
