k8s/db.yml
# headless service to avoid deletion of patronidemo-config endpoint
apiVersion: v1
kind: Service
metadata:
  name: patronidemo-config
  namespace: chelsea
  labels:
    application: patroni
    cluster-name: sandbox
spec:
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &cluster_name patronidemo
  namespace: chelsea
  labels:
    application: patroni
    cluster-name: *cluster_name 
spec:
  replicas: 3
  serviceName: *cluster_name
  selector:
    matchLabels:
      application: patroni
      cluster-name: *cluster_name
  template:
    metadata:
      labels:
        application: patroni
        cluster-name: *cluster_name
    spec:
      serviceAccountName: patronidemo
      containers:
      - name: *cluster_name
        image: eydscasandbox.azurecr.io/chelsea/patroni:latest  # docker build -t patroni .
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /readiness
            port: 8008
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort: 8008
          protocol: TCP
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /home/postgres/pgdata
          name: pgdata
      terminationGracePeriodSeconds: 0
      volumes:
      - name: pgdata
        emptyDir: {}
#  volumeClaimTemplates:
#  - metadata:
#      labels:
#        application: spilo
#        spilo-cluster: *cluster_name
#      annotations:
#        volume.alpha.kubernetes.io/storage-class: anything
#      name: pgdata
#    spec:``
#      accessModes:
#      - ReadWriteOnce
#      resources:
#        requests:
#          storage: 5Gi

---
apiVersion: v1
kind: Endpoints
metadata:
  name: &cluster_name patronidemo
  labels:
    application: patroni
    cluster-name: *cluster_name
subsets: []

---
apiVersion: v1
kind: Service
metadata:
  name: &cluster_name patronidemo
  labels:
    application: patroni
    cluster-name: *cluster_name
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: patronidemo-repl
  labels:
    application: patroni
    cluster-name:  &cluster_name patronidemo
    role: replica
spec:
  type: ClusterIP
  selector:
    application: patroni
    cluster-name: *cluster_name
    role: replica
  ports:
  - port: 5432
    targetPort: 5432
