k8s/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: chelsea
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: eydscasandbox.azurecr.io/chelsea/nginx:latest

          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: chelsea
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
