k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chelsea-ingress
  namespace: chelsea
  annotations:
    nginx.ingress.kubernetes.io/health-probe-path: /ping
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/ingress.class:  nginx
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - hosts:
        - 'chelsea.k8s.freshworks.club'
      secretName: chelsea.k8s.freshworks.club
  rules:
    - host: 'chelsea.k8s.freshworks.club'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
